INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../include)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../include/libcueify/types.h.in
               ${CMAKE_CURRENT_BINARY_DIR}/../include/libcueify/types.h)
LINK_LIBRARIES(cueify)

ADD_EXECUTABLE(cueify-exe cueify.c)
SET_TARGET_PROPERTIES(cueify-exe PROPERTIES OUTPUT_NAME "cueify")

IF(CMAKE_COMPILER_IS_GNUCC)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -pedantic-errors")
ENDIF(CMAKE_COMPILER_IS_GNUCC)
