INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../include)

FIND_PACKAGE(SWIG)
IF(SWIG_FOUND)
    INCLUDE(${SWIG_USE_FILE})

    SET(CMAKE_SWIG_FLAGS "")

    SET_SOURCE_FILES_PROPERTIES(cueify.i PROPERTIES CPLUSPLUS ON)

    FIND_PACKAGE(PythonLibs)
    IF(PYTHONLIBS_FOUND)
        INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
        SWIG_ADD_MODULE(python-cueify python cueify.i)
        SWIG_LINK_LIBRARIES(python-cueify ${PYTHON_LIBRARIES})
#        INSTALL(TARGETS python-cueify DESTINATION ${LIB_INSTALL_DIR})
    ENDIF(PYTHONLIBS_FOUND)

    FIND_PACKAGE(Ruby)
    IF(RUBY_FOUND)
        INCLUDE_DIRECTORIES(${RUBY_INCLUDE_PATH})
        SWIG_ADD_MODULE(ruby-cueify ruby cueify.i)
        SWIG_LINK_LIBRARIES(ruby-cueify ${RUBY_LIBRARIES})
#        INSTALL(TARGETS ruby-cueify DESTINATION ${LIB_INSTALL_DIR})
    ENDIF(RUBY_FOUND)

    FIND_PACKAGE(PerlLibs)
    IF(PERLLIBS_FOUND)
        INCLUDE_DIRECTORIES(${PERL_INCLUDE_PATH})
        SWIG_ADD_MODULE(perl-cueify perl cueify.i)
        SWIG_LINK_LIBRARIES(perl-cueify ${PERL_LIBRARIES})
#        INSTALL(TARGETS perl-cueify DESTINATION ${LIB_INSTALL_DIR})
    ENDIF(PERLLIBS_FOUND)
ENDIF(SWIG_FOUND)

IF(CMAKE_COMPILER_IS_GNUCC)
    SET(CMAKE_CC_FLAGS "${CMAKE_CC_FLAGS} -Wall -Werror -Wextra -pedantic")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

